<resources>
    <string name="app_name" translatable="false">Bring It</string>
    <string name="action_settings">Settings</string>
    <string name="bought_history">History</string>
    <string name="this_years_total">This Years Total</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="plus_sign" translatable="false">+</string>
    <string name="minus_sign" translatable="false">-</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fill_username">Fill username</string>
    <string name="password_constraints">Password needs to be longer than 6 character</string>
    <string name="incorrect_username">Incorrect username</string>
    <string name="logout">Logout</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username_too_short">Username too short</string>
    <string name="password_too_short">Password too short</string>
    <string name="passwords_not_match">Passwords do not match</string>
    <string name="username_taken">Username taken</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="remove_from_cart">Do you really want to remove this product from the cart?</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="insert_prod_name">Insert product name</string>
    <string name="this_week_total">This Week Total</string>
    <string name="info">Info</string>
    <string name="registration_complete">Registration complete</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="are_you_sure_you_want_to_remove_this_item">Are you sure you want to remove this item?</string>
    <string name="no">No</string>
    <string name="yes">yes</string>
    <string name="amount_with_dots">Amount :</string>
</resources>
